[package]
name = "keccak-hasher"
version = "0.14.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Keccak-256 implementation of the Hasher trait"
repository = "https://github.com/paritytech/parity/"
license = "Apache-2.0"

[dependencies]
tiny-keccak = "1.4.2"
hash-db = { path = "../../hash-db", default-features = false, version = "0.14.0" }
hash256-std-hasher = { path = "../../hash256-std-hasher", version = "0.14.0" }

[dependencies.ewasm_api]
path = "/Users/mbpro/dev_ewasm/ewasm-rust-api"
default-features = false
features = ["std", "eth2", "wee_alloc", "debug"]

[features]
default = ["std"]
std = [
  "hash-db/std",
]
